K8S/Ingress/http_app_routing-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-learning-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: kutya.ec7114563f3f422c8149.westeurope.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: ipcluster-service
            port:
              number: 80
